overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
     padding: 0;
     margin: 0;
     -webkit-overflow-scrolling: touch;
+    overflow-x: hidden;
     
   }
 
